--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ p1 {
 	border: #191E28 solid;
 	border-width: 8px;
 	text-align: center;
-	margin: 0 auto;
+	margin: 0 auto; 
 
 }
 .smallwhitebox {
@@ -37,4 +37,62 @@ p1 {
 	height: 50px;
 	width:68px;
 	margin-top:215px;
+	margin-bottom: 100px;
+
+}
+
+.threeboxes {
+	height:68px;
+	width:300px;
+	background-color:white;
+	margin-top:30px;
+	margin-bottom: 30px;
+	margin-left: auto;
+	margin-right: auto;
+
+}
+
+.fourth {
+
+	height:190px;
+	background-color: #E2ECF3;
+}
+
+.fifth {
+	height:1590px;
+	background-color: #C7C9CE;
+}
+
+.firstwhitebox {
+	background-color: white;
+	width:440px;
+	height: 220px;
+	margin-right: auto;
+	margin-left: auto;
+	margin-bottom: 32px;
+	border-top:32px solid #C7C9CE;
+}
+
+.bigwhiteboxes {
+	background-color: white;
+	width:440px;
+	height: 220px;
+	margin-bottom: 32px;
+	margin-top:32px;
+	margin-left: auto;
+	margin-right: auto;	
+
+}
+.sixth {
+	background-color: #E2ECF3 ;
+	height:172px;
+	padding-top: 125px;
+}
+.seventh {
+	height:50px;
+	width:210px;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #0C76B5;
+
 }
