--- a/style.css
+++ b/style.css
@@ -78,6 +78,24 @@ p1 {
 	margin-right: auto;
 
 }
+.bottomleftzig {
+	background-color: #4E5A6C;
+	display: inline;
+	height: 57px;
+	width: 50px;
+	margin-left: 0px;
+	margin-bottom: 0px;
+	margin-top: 12px;
+	float:left;
+}
+.toprightzag {
+	background-color: #4E5A6C;
+	display: inline;
+	float: right;
+	height: 56px;
+	width: 238px;
+	margin-right: 2px;
+}
 
 .fourth {
 
@@ -108,6 +126,7 @@ p1 {
 	margin-bottom: 16px;
 	margin-top:20px;
 }
+
 
 .bigwhiteboxes {
 	background-color: white;
