day 3 first changes

--- a/style.css
+++ b/style.css
@@ -4,10 +4,14 @@
 }
 .toprightbox{
 	background-color: #005A95;
-	width: 73px;
+	width: 74px;
 	height:50px;
 	display:inline;
 	float:right;
+	color: white;
+	line-height: 50px;
+	text-align: center;
+	vertical-align: middle;
 
 }
 .topleftsquare{
@@ -20,13 +24,21 @@
 }
 
 .topleftrec {
-	background-color: white;
+	
 	height:32px;
-	width:117px;
+	width:118px;
 	display:inline;
 	float:left;
 	margin-top: 8px;
 	margin-bottom: 8px;
+	line-height: 32px;
+	text-align: center;
+	vertical-align: middle;
+	font-size: 25px;
+	color: #78C3E4;
+}
+.topleftrec > span {
+	color: white;
 }
 
 .second  {
@@ -39,7 +51,7 @@
 	padding: 182px 55px 40px 55px;
 	
 }
-p1 {
+.smalltext {
 	font-family: arial ;
 	color: white;
 	font-size: 20px;
@@ -55,7 +67,10 @@ p1 {
 	border: #191E28 solid;
 	border-width: 8px;
 	text-align: center;
-	margin: 0 auto; 
+	margin: 0 auto;
+	font-size: 24px;
+	line-height: 52px;
+	vertical-align: middle; 
 
 }
 .smallwhitebox {
