--- a/style.css
+++ b/style.css
@@ -86,30 +86,35 @@
 .threeboxes {
 	height:68px;
 	width:300px;
-	background-color:white;
+	background-color:#273040;
 	margin-top:30px;
 	margin-bottom: 30px;
 	margin-left: auto;
 	margin-right: auto;
+	padding-right: 20px;
+}
+.leftsquare {
+	background-color: white;
+	height:68px;
+	width:60px;
 
 }
-.bottomleftzig {
-	background-color: #4E5A6C;
-	display: inline;
-	height: 57px;
-	width: 50px;
-	margin-left: 0px;
-	margin-bottom: 0px;
-	margin-top: 12px;
-	float:left;
-}
 .toprightzag {
-	background-color: #4E5A6C;
-	display: inline;
+	background-color: #273040;
+	font-size: 22px;
 	float: right;
 	height: 56px;
-	width: 238px;
-	margin-right: 2px;
+	width: 228px;
+	text-align: left;
+	padding-left: 10px;
+	
+
+}
+.toprightzag > span {
+	font-size: 13px;
+	float:below;
+	color: lightgrey;
+	white-space: pre;
 }
 
 .fourth {
