--- a/style.css
+++ b/style.css
@@ -17,9 +17,7 @@
 }
 .topleftsquare{
 	background-image: url("https://raw.githubusercontent.com/TIY-Austin-Front-End-Engineering/mobile-layout-2/master/images/logo.png");
-	background-size: 100% 100%;
-	height: 36px;
-	width: 36px;
+	background-size: 100% 100%;px;
 	display:inline;
 	float:left;
 	margin:12px;
@@ -78,7 +76,6 @@
 
 }
 .smallwhitebox {
-	background-color: white;
 	margin: 0 auto;
 	height: 50px;
 	width:68px;
@@ -90,27 +87,46 @@
 .threeboxes {
 	height:68px;
 	width:300px;
-	background-color:#273040;
+	
 	margin-top:30px;
 	margin-bottom: 30px;
 	margin-left: auto;
 	margin-right: auto;
 	padding-right: 20px;
 }
-.leftsquare {
-	background-color: white;
-	height:68px;
+#box1 {
+	background-image: url("https://raw.githubusercontent.com/TIY-Austin-Front-End-Engineering/mobile-layout-2/master/images/tablet.png");
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	height:64px;
 	width:60px;
 
 }
+#box2 {
+	background-image: url("https://raw.githubusercontent.com/TIY-Austin-Front-End-Engineering/mobile-layout-2/master/images/newspaper.png");
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	height:64px;
+	width:60px;
+
+}
+
+#box3 {
+	background-image: url("https://raw.githubusercontent.com/TIY-Austin-Front-End-Engineering/mobile-layout-2/master/images/paint-brush.png");
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	height:64px;
+	width:60px;
+}
 .toprightzag {
-	background-color: #273040;
+	
 	font-size: 22px;
 	float: right;
 	height: 56px;
 	width: 228px;
 	text-align: left;
 	padding-left: 10px;
+	padding-top: 8px;
 	
 
 }
@@ -169,6 +185,7 @@
 	border-top: solid white 20px;
 }
 .greysquares{
+	border-radius: 50%;
 	background-color: #BAC7CE;
 	width:64px;
 	height:64px;
