--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@
 }
 #box2 {
 	background-image: url("https://raw.githubusercontent.com/TIY-Austin-Front-End-Engineering/mobile-layout-2/master/images/newspaper.png");
-	background-size: 100% 100%;
+	background-size: 90% 90%;
 	background-repeat: no-repeat;
 	height:64px;
 	width:60px;
@@ -113,7 +113,7 @@
 
 #box3 {
 	background-image: url("https://raw.githubusercontent.com/TIY-Austin-Front-End-Engineering/mobile-layout-2/master/images/paint-brush.png");
-	background-size: 100% 100%;
+	background-size: 90% 90%;
 	background-repeat: no-repeat;
 	height:64px;
 	width:60px;
@@ -139,19 +139,22 @@
 
 .fourth {
 	color:#273040;
-	font-size: 35px;
-	height:120px;
+	font-size: 32px;
+	height:95px;
 	padding:20px;
-	padding-top: 50px;
+	padding-top: 30px;
+	padding-bottom: 60px;
 	background-color: #E2ECF3;
 	vertical-align: middle;
 	text-align: center;
+
 	
 }
 
 .fifth {
 	height:1590px;
 	background-color: #C7C9CE;
+	padding-bottom: 20px;
 }
 
 .firstwhitebox {
@@ -165,6 +168,12 @@
 }
 .firstgreysquare {
 	background-color: #BAC7CE;
+	border-radius: 50%;
+	box-shadow: #585C5E 5px -5px 2px;
+	background-image: url("https://raw.githubusercontent.com/TIY-Austin-Front-End-Engineering/mobile-layout-2/master/images/lightbulb.png");
+	background-size: 70% 70%;
+	background-repeat: no-repeat;
+	background-position: center;
 	width:64px;
 	height:64px;
 	margin-left: auto;
@@ -183,23 +192,86 @@
 	margin-left: auto;
 	margin-right: auto;	
 	border-top: solid white 20px;
+
 }
-.greysquares{
+.greysquare2{
 	border-radius: 50%;
+	box-shadow: #585C5E 5px -5px 2px;
 	background-color: #BAC7CE;
 	width:64px;
 	height:64px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 16px;
+	background-image: url("https://raw.githubusercontent.com/TIY-Austin-Front-End-Engineering/mobile-layout-2/master/images/cloud.png");
+	background-size: 70% 70%;
+	background-repeat: no-repeat;
+	background-position: center;
 }
+.greysquare3{
+	border-radius: 50%;
+	box-shadow: #585C5E 5px -5px 2px;
+	background-color: #BAC7CE;
+	width:64px;
+	height:64px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 16px;
+	background-image: url("https://raw.githubusercontent.com/TIY-Austin-Front-End-Engineering/mobile-layout-2/master/images/code.png");
+	background-size: 70% 70%;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.greysquare4{
+	border-radius: 50%;
+	box-shadow: #585C5E 5px -5px 2px;
+	background-color: #BAC7CE;
+	width:64px;
+	height:64px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 16px;
+	background-image: url("https://raw.githubusercontent.com/TIY-Austin-Front-End-Engineering/mobile-layout-2/master/images/comments.png");
+	background-size: 70% 70%;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.greysquare5{
+	border-radius: 50%;
+	box-shadow: #585C5E 5px -5px 2px;
+	background-color: #BAC7CE;
+	width:64px;
+	height:64px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 16px;
+	background-image: url("https://raw.githubusercontent.com/TIY-Austin-Front-End-Engineering/mobile-layout-2/master/images/gift.png");
+	background-size: 70% 70%;
+	background-repeat: no-repeat;
+	background-position: center;
+	}
+.greysquare6{
+	border-radius: 50%;
+	box-shadow: #585C5E 5px -5px 2px;
+	background-color: #BAC7CE;
+	width:64px;
+	height:64px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 16px;
+	background-image: url("https://raw.githubusercontent.com/TIY-Austin-Front-End-Engineering/mobile-layout-2/master/images/globe.png");
+	background-size: 70% 70%;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
 .slimgreyrec{
 	height:28px;
 	width:400px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 22px;
-	color: #273040;
+	color: #0A3D5E;
 	text-align: center;
 	font-size: 20px;
 }
@@ -216,23 +288,25 @@
 }
 .sixth {
 	background-color: #E2ECF3 ;
-	height:172px;
+	height:200px;
 	text-align: center;
-	font-size: 50px;
+	font-size: 42px;
 	padding-top: 20px;
 }
 .seventh {
-	height:50px;
-	width:210px;
+	height:60px;
+	width:230px;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: #0C76B5;
-	margin-top: 35px;
+	margin-top: 50px;
 	text-align: center;
 	color: white;
-	font-size: 20px;
-	line-height: 50px;
+	font-size: 25px;
+	line-height: 60px;
 	vertical-align: middle;
+	border: solid #082535 3px;
+
 }
 .bottom {
 	height:200px;
@@ -263,12 +337,16 @@ li {
 }
 
 .lastwhitebox {
-width:180px;
+width:250px;
 height:40px;
-background-color: white;
+background-color: black;
 margin-left: auto;
 margin-right: auto;
-margin-top: 20px;
+margin-top: 40px;
+background-image: url("https://raw.githubusercontent.com/TIY-Austin-Front-End-Engineering/mobile-layout-2/master/images/automattic.png");
+background-size: 90%;
+background-repeat: no-repeat;
+background-position: center;
 }
 
 
@@ -700,3 +778,5 @@ td,
 th {
   padding: 0;
 }
+
+
